Complete phase 1 service boundaries and ownership security